--- a/README
+++ b/README
@@ -8,6 +8,10 @@ greek and hebrew letters
 
 delimeters
 
+special charaters, some accents and symbols
+
+standard function names
+
 \left
 \right
 \Bigl
